--- a/CalculoPrecoVenda/CalculoPrecoVenda/View/frmImpostosFederais.xaml
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/View/frmImpostosFederais.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CalculoPrecoVenda"
         mc:Ignorable="d"
-        Title="Impostos Federais" Width="850" Height="400" 
+        Title="Impostos Federais" Width="950" Height="430" 
         WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <local:NumberFormatter x:Key="myNumberFormatter"/>
     </Window.Resources>
     <StackPanel Margin="10" HorizontalAlignment="Center">
-        <GroupBox Name="grpPrecoVenda" Header="Impostos Federais" Width="800" Height="300" Grid.Row="0" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Left">
+        <GroupBox Name="grpPrecoVenda" Header="Impostos Federais" Width="900" Height="330" Grid.Row="0" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Left">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="35"/>
@@ -23,13 +23,14 @@
                     <RowDefinition Height="35"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="70"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="140"/>
+                    <ColumnDefinition Width="80"/>
+                    <ColumnDefinition Width="30"/>
+                    <ColumnDefinition Width="125"/>
+                    <ColumnDefinition Width="125"/>
+                    <ColumnDefinition Width="125"/>
+                    <ColumnDefinition Width="125"/>
+                    <ColumnDefinition Width="125"/>
                 </Grid.ColumnDefinitions>
                 
                 <Label Grid.Row="0" Grid.Column="0" Content="Lucro Pretendido"  VerticalAlignment="Center"/>
@@ -40,60 +41,88 @@
                 <Label Grid.Row="5" Grid.Column="0" Content="CSLL"  VerticalAlignment="Center"/>
                 <Label Grid.Row="6" Grid.Column="0" Content="Total dos Impostos"  VerticalAlignment="Center"/>
 
-                <TextBox Grid.Row="0" Grid.Column="2" Name="txtPercLucro1" VerticalAlignment="Center" Margin="30,0" 
-                         Text="{Binding Source={StaticResource Settings}, Path=Default.Lucro1, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='p'}" TextAlignment="Center"/>
-                <TextBox Grid.Row="0" Grid.Column="3" Name="txtPercLucro2" VerticalAlignment="Center" Margin="30,0" 
-                         Text="{Binding Source={StaticResource Settings}, Path=Default.Lucro2, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='p'}" TextAlignment="Center"/>
-                <TextBox Grid.Row="0" Grid.Column="4" Name="txtPercLucro3" VerticalAlignment="Center" Margin="30,0" 
-                         Text="{Binding Source={StaticResource Settings}, Path=Default.Lucro3, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='p'}" TextAlignment="Center"/>
-                <TextBox Grid.Row="0" Grid.Column="5" Name="txtPercLucro4" VerticalAlignment="Center" Margin="30,0" 
-                         Text="{Binding Source={StaticResource Settings}, Path=Default.Lucro4, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='p'}" TextAlignment="Center"/>
-                <TextBox Grid.Row="0" Grid.Column="6" Name="txtPercLucro5" VerticalAlignment="Center" Margin="30,0" 
-                         Text="{Binding Source={StaticResource Settings}, Path=Default.Lucro5, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='p'}" TextAlignment="Center"/>
+                <StackPanel Grid.Row="0" Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" 
+                            Margin="2">
+                    <TextBox Name="txtPercLucro1" Width="70" Height="25"
+                         Text="{Binding Source={StaticResource Settings}, Path=Default.Lucro1, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" TextAlignment="Center"/>
+                    <Label Content="%" Margin="5,0"/>
+                </StackPanel>
 
-                <TextBox Grid.Row="1" Grid.Column="2" Name="txtValorSugerido1" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="1" Grid.Column="3" Name="txtValorSugerido2" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="1" Grid.Column="4" Name="txtValorSugerido3" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="1" Grid.Column="5" Name="txtValorSugerido4" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="1" Grid.Column="6" Name="txtValorSugerido5" VerticalAlignment="Center" Margin="5,0"/>
+                <StackPanel Grid.Row="0" Grid.Column="4" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" 
+                            Margin="2">
+                    <TextBox Name="txtPercLucro2" Width="70" Height="25"
+                         Text="{Binding Source={StaticResource Settings}, Path=Default.Lucro2, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" TextAlignment="Center"/>
+                    <Label Content="%" Margin="5,0"/>
+                </StackPanel>
+
+                <StackPanel Grid.Row="0" Grid.Column="5" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" 
+                            Margin="2">
+                    <TextBox Name="txtPercLucro3" Width="70" Height="25"
+                         Text="{Binding Source={StaticResource Settings}, Path=Default.Lucro3, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" TextAlignment="Center"/>
+                    <Label Content="%" Margin="5,0"/>
+                </StackPanel>
+
+                <StackPanel Grid.Row="0" Grid.Column="6" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" 
+                            Margin="2">
+                    <TextBox Name="txtPercLucro4" Width="70" Height="25"
+                         Text="{Binding Source={StaticResource Settings}, Path=Default.Lucro4, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" TextAlignment="Center"/>
+                    <Label Content="%" Margin="5,0"/>
+                </StackPanel>
+
+                <StackPanel Grid.Row="0" Grid.Column="7" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" 
+                            Margin="2">
+                    <TextBox Name="txtPercLucro5" Width="70" Height="25"
+                         Text="{Binding Source={StaticResource Settings}, Path=Default.Lucro5, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" TextAlignment="Center"/>
+                    <Label Content="%" Margin="5,0"/>
+                </StackPanel>
+
+                <TextBox Grid.Row="1" Grid.Column="3" Name="txtValorSugerido1" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="1" Grid.Column="4" Name="txtValorSugerido2" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="1" Grid.Column="5" Name="txtValorSugerido3" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="1" Grid.Column="6" Name="txtValorSugerido4" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="1" Grid.Column="7" Name="txtValorSugerido5" VerticalAlignment="Center" Margin="5,0"/>
 
                 <TextBox Grid.Row="2" Grid.Column="1" Name="txtAliquotaIR" VerticalAlignment="Center" Margin="5,0" 
-                         Text="{Binding Source={StaticResource Settings}, Path=Default.Irpj, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='p'}" TextAlignment="Center"/>
-                <TextBox Grid.Row="2" Grid.Column="2" Name="txtImposotoRenda1" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="2" Grid.Column="3" Name="txtImposotoRenda2" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="2" Grid.Column="4" Name="txtImposotoRenda4" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="2" Grid.Column="5" Name="txtImposotoRenda5" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="2" Grid.Column="6" Name="txtImposotoRenda6" VerticalAlignment="Center" Margin="5,0"/>
+                         Text="{Binding Source={StaticResource Settings}, Path=Default.Irpj, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" TextAlignment="Center"/>
+                <Label Grid.Row="2" Grid.Column="2" Content="%" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="2" Grid.Column="3" Name="txtImposotoRenda1" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="2" Grid.Column="4" Name="txtImposotoRenda2" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="2" Grid.Column="5" Name="txtImposotoRenda4" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="2" Grid.Column="6" Name="txtImposotoRenda5" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="2" Grid.Column="7" Name="txtImposotoRenda6" VerticalAlignment="Center" Margin="5,0"/>
 
                 <TextBox Grid.Row="3" Grid.Column="1" Name="txtAliquotaCofins" VerticalAlignment="Center" Margin="5,0" 
-                         Text="{Binding Source={StaticResource Settings}, Path=Default.Cofins, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='p'}" TextAlignment="Center"/>
-                <TextBox Grid.Row="3" Grid.Column="2" Name="txtCofins1" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="3" Grid.Column="3" Name="txtCofins2" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="3" Grid.Column="4" Name="txtCofins3" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="3" Grid.Column="5" Name="txtCofins4" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="3" Grid.Column="6" Name="txtCofins5" VerticalAlignment="Center" Margin="5,0"/>
+                         Text="{Binding Source={StaticResource Settings}, Path=Default.Cofins, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" TextAlignment="Center"/>
+                <Label Grid.Row="3" Grid.Column="2" Content="%" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="3" Grid.Column="3" Name="txtCofins1" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="3" Grid.Column="4" Name="txtCofins2" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="3" Grid.Column="5" Name="txtCofins3" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="3" Grid.Column="6" Name="txtCofins4" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="3" Grid.Column="7" Name="txtCofins5" VerticalAlignment="Center" Margin="5,0"/>
 
                 <TextBox Grid.Row="4" Grid.Column="1" Name="txtAliquotaPis" VerticalAlignment="Center" Margin="5,0" 
-                         Text="{Binding Source={StaticResource Settings}, Path=Default.Pis, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='p'}" TextAlignment="Center"/>
-                <TextBox Grid.Row="4" Grid.Column="2" Name="txtPis1" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="4" Grid.Column="3" Name="txtPis2" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="4" Grid.Column="4" Name="txtPis3" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="4" Grid.Column="5" Name="txtPis4" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="4" Grid.Column="6" Name="txtPis5" VerticalAlignment="Center" Margin="5,0"/>
+                         Text="{Binding Source={StaticResource Settings}, Path=Default.Pis, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" TextAlignment="Center"/>
+                <Label Grid.Row="4" Grid.Column="2" Content="%" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="4" Grid.Column="3" Name="txtPis1" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="4" Grid.Column="4" Name="txtPis2" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="4" Grid.Column="5" Name="txtPis3" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="4" Grid.Column="6" Name="txtPis4" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="4" Grid.Column="7" Name="txtPis5" VerticalAlignment="Center" Margin="5,0"/>
 
                 <TextBox Grid.Row="5" Grid.Column="1" Name="txtAliquotaCsll" VerticalAlignment="Center" Margin="5,0"
-                         Text="{Binding Source={StaticResource Settings}, Path=Default.Csll, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='p'}" TextAlignment="Center"/>
-                <TextBox Grid.Row="5" Grid.Column="2" Name="txtCsll1" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="5" Grid.Column="3" Name="txtCsll2" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="5" Grid.Column="4" Name="txtCsll3" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="5" Grid.Column="5" Name="txtCsll4" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="5" Grid.Column="6" Name="txtCsll5" VerticalAlignment="Center" Margin="5,0"/>
+                         Text="{Binding Source={StaticResource Settings}, Path=Default.Csll, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" TextAlignment="Center"/>
+                <Label Grid.Row="5" Grid.Column="2" Content="%" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="5" Grid.Column="3" Name="txtCsll1" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="5" Grid.Column="4" Name="txtCsll2" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="5" Grid.Column="5" Name="txtCsll3" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="5" Grid.Column="6" Name="txtCsll4" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="5" Grid.Column="7" Name="txtCsll5" VerticalAlignment="Center" Margin="5,0"/>
 
-                <TextBox Grid.Row="6" Grid.Column="2" Name="txtTotalImpostos1" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="6" Grid.Column="3" Name="txtTotalImpostos2" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="6" Grid.Column="4" Name="txtTotalImpostos3" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="6" Grid.Column="5" Name="txtTotalImpostos4" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Grid.Row="6" Grid.Column="6" Name="txtTotalImpostos5" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="6" Grid.Column="3" Name="txtTotalImpostos1" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="6" Grid.Column="4" Name="txtTotalImpostos2" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="6" Grid.Column="5" Name="txtTotalImpostos3" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="6" Grid.Column="6" Name="txtTotalImpostos4" VerticalAlignment="Center" Margin="5,0"/>
+                <TextBox Grid.Row="6" Grid.Column="7" Name="txtTotalImpostos5" VerticalAlignment="Center" Margin="5,0"/>
             </Grid>
         </GroupBox>
         <Button Name="btnFechar" Content="Fechar"  Width="100" Height="35" HorizontalAlignment="Right" Margin="10" Click="btnFechar_Click"/>
