--- a/CalculoPrecoVenda/CalculoPrecoVenda/View/frmLocalizarNcm.xaml
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/View/frmLocalizarNcm.xaml
@@ -47,11 +47,13 @@
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding NcmId}" Width="50" Header="Cod" />
                 <DataGridTextColumn Binding="{Binding CodNcm}" Width="115" Header="NCM" />
-                <DataGridTextColumn Binding="{Binding NomeNcm}" Width="490" Header="Nome NCM " />
+                <DataGridTextColumn Binding="{Binding NomeNcm}" Width="440" Header="Nome NCM " />
                 <DataGridTextColumn Binding="{Binding ImpImportacao, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" 
                                     Width="50" Header="II" CellStyle="{StaticResource CellRightAlign}"/>
                 <DataGridTextColumn Binding="{Binding Ipi, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" 
                                     Width="50" Header="IPI" CellStyle="{StaticResource CellRightAlign}"/>
+                <DataGridTextColumn Binding="{Binding SubstTribut, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" 
+                                    Width="50" Header="ST" CellStyle="{StaticResource CellRightAlign}"/>
             </DataGrid.Columns>
             <DataGrid.ColumnHeaderStyle>
                 <Style TargetType="{x:Type DataGridColumnHeader}">
